# websnapshots

./: .env.example  .gitignore  AI_DIFF_RESEARCH.md  GLM_FIX_APPROVAL.md  GLM_FIX_INVESTIGATION.md  GLM_FIX_TEST_REPORT.md  PLANNING.md  README.md  SETUP.md  TEST_REPORT.md  TROUBLESHOOTING.md  ai_compare.py  compare_images.py  glm_diff.py  pyproject.toml  requirements.txt  test_cli.py  test_web_snapshot.py  test_websnapshot.py  web_snapshot.py  web_snapshot.py.bak
docs/: AI_DIFF_EVALUATION_REPORT.md  API_REFERENCE.md  COMPARE_PLANNING.md  DEVELOPMENT.md  FINAL_QA_REPORT.md  FIX_PLAN.md  IMPROVEMENTS.md  OCR_TEST_REPORT.md  README.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md
trouble/: FIX_HISTORY.md  GLM_OPUS_COMPARISON.md  REPORT.md
websnapshot/: __init__.py  __main__.py  cli.py  ocr.py  screenshot.py  utils.py
