[project]
name = "web-snapshot"
version = "1.0.0"
description = "Webページのスクリーンショットを取得するCLIツール"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
]

[project.scripts]
web-snapshot = "web_snapshot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
